# dama-rb

./: .gitignore  .overcommit.yml  .rspec  .rubocop.yml  CHANGELOG.md  CONTRIBUTING.md  Gemfile  LICENSE  README.md  Rakefile  SECURITY.md  dama.gemspec
.github/workflows/: ci.yml  deploy-pages.yml  release-examples.yml  release.yml
.overcommit/commit_msg/: conventional_commit.rb
.overcommit/pre_commit/: clippy.rb
examples/: stress_test.rb
examples/breakout/: config.rb
examples/checkers/: Gemfile  config.rb
examples/demo/: Gemfile  config.rb
exe/: dama
ext/dama_native/: Cargo.toml  extconf.rb
ext/dama_native/.cargo/: config.toml
ext/dama_native/src/: audio.rs  engine.rs  lib.rs  renderer.rs  window.rs
ext/dama_native/src/renderer/: screenshot.rs  shape_renderer.rs  text_renderer.rs
ext/dama_native/tests/: headless_rendering.rs
lib/: dama.rb
lib/dama/: animation.rb  asset_cache.rb  audio.rb  auto_loader.rb  backend.rb  camera.rb  cli.rb  colors.rb  command_buffer.rb  component.rb  configuration.rb  debug.rb  event_bus.rb  game.rb  geometry.rb  input.rb  keys.rb  node.rb  physics.rb  registry.rb  release.rb  scene.rb  scene_graph.rb  sprite_sheet.rb  tween.rb  version.rb  vertex_batch.rb  web_builder.rb
script/: build_platform_gem.rb
spec/: spec_helper.rb
spec/dama/: animation_spec.rb  audio_spec.rb  auto_loader_spec.rb  backend_spec.rb  boot_spec.rb  camera_spec.rb  cli_spec.rb  colors_spec.rb  command_buffer_spec.rb  component_spec.rb  configuration_spec.rb  event_bus_spec.rb  game_spec.rb  node_spec.rb  scene_spec.rb  shader_spec.rb  sprite_sheet_spec.rb
spec/integration/: camera_spec.rb  dsl_proposal_spec.rb  edge_cases_spec.rb  physics_spec.rb  rendering_spec.rb  scene_switching_spec.rb  sprite_spec.rb  wasm_build_spec.rb  web_build_spec.rb
spec/support/: dama_web_app.rb  headless_backend.rb  (+5 more)
(+137 files in other folders)
